syntax = "proto2";

package com.tisza.tarock;
option java_package = "com.tisza.tarock.proto";

import "utils.proto"

message Action
{
	oneof action_type
	{
		Bid action_bid = 1;
		Call action_call = 2;
		Change action_change = 3;
		Announce action_announce = 4;
		AnnouncePassz action_annouce_passz = 5;
		PlayCard action_play_card = 6;
		ReadyForNewGame action_ready_for_new_game = 7;
		ThrowCards action_throw_cards = 8;
	}
	message Bid
	{
		required sint32 bid = 1;
	}
	message Call
	{
		required Card card = 1;
	}
	message Change
	{
		repeated Card card = 1;
	}
	message Announce
	{
		required Announcement annoncement = 1;
	}
	message AnnouncePassz
	{
	}
	message PlayCard
	{
		required Card card = 1;
	}
	message ReadyForNewGame
	{
	}
	message ThrowCards
	{
	}
}

